--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: java
 deploy:
   provider: heroku
-  api-key:
-    secure: $HEROKU_API_KEY
+  api-key: $HEROKU_API_KEY
   app: addressbooksysc4806
